# fastmail-py-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fastmail_sdk/: __init__.py  config.py  errors.py  ical.py
src/fastmail_sdk/caldav/: client.py  xml_helpers.py
src/fastmail_sdk/carddav/: client.py
src/fastmail_sdk/jmap/: client.py
src/fastmail_sdk/models/: calendar.py  contacts.py  email.py  event.py
tests/: test_caldav_client.py  test_ical.py
