[project]
name = "fastmail-py-sdk"
version = "0.1.0"
description = "Python SDK for Fastmail's CalDAV API — calendars, events, and iCalendar round-tripping"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["fastmail", "caldav", "calendar", "icalendar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]

dependencies = [
    "httpx>=0.28",
    "icalendar>=6.1",
    "pydantic>=2.10",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmail_sdk"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]
ignore = ["N818"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
